--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -8,6 +8,7 @@
   <h1>Muokkaa elokuvaa</h1>
 
   <form action="/items/{{ item.id }}/update" method="post">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     <p>
       Nimi: <br />
       <input type="text" name="title" value="{{ item.title }}" required />
