--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,7 @@
             {% endif %}
             {% if session.username == item.username %}
               <form action="/items/{{ item.id }}/delete" method="post" style="display:inline;">
+                <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
                 <a href="/items/{{ item.id }}/edit">Muokkaa</a>
                 <input type="submit" value="Poista" />
               </form>
